--- a/Products/ProductsProj.csproj
+++ b/Products/ProductsProj.csproj
@@ -555,23 +555,30 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\CurrenciesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\ProducersController.cs" />
+    <Compile Include="Controllers\ManufacturersController.cs" />
     <Compile Include="Controllers\ProductsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\MappingProfile.cs" />
-    <Compile Include="Migrations\20190606062959_fk.cs" />
-    <Compile Include="Migrations\20190606062959_fk.designer.cs">
-      <DependentUpon>20190606062959_fk.cs</DependentUpon>
+    <Compile Include="Migrations\20190614074415_rename.cs" />
+    <Compile Include="Migrations\20190614074415_rename.designer.cs">
+      <DependentUpon>20190614074415_rename.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\20190614080235_renamepr.cs" />
+    <Compile Include="Migrations\20190614080235_renamepr.designer.cs">
+      <DependentUpon>20190614080235_renamepr.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\ProductsContextModelSnapshot.cs" />
+    <Compile Include="Models\Mapping\MappingProfile.cs" />
     <Compile Include="Models\Currency.cs" />
+    <Compile Include="Models\PostRM\CurrencyPostRM.cs" />
+    <Compile Include="Models\PostRM\ManufacturerPostRM.cs" />
+    <Compile Include="Models\PostRM\ProductPostRM.cs" />
     <Compile Include="Models\RM\CurrencyRM.cs" />
-    <Compile Include="Models\Producer.cs" />
-    <Compile Include="Models\RM\ProducerRM.cs" />
+    <Compile Include="Models\Manufacturer.cs" />
+    <Compile Include="Models\RM\ManufacturerRM.cs" />
     <Compile Include="Models\Product.cs" />
-    <Compile Include="Models\ProductsContext.cs" />
+    <Compile Include="Models\Context\ProductsContext.cs" />
     <Compile Include="Models\RM\ProductRM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
